Extends builds.kpack.io with a new optional field spec.builder.ref. This allows build resources to reference resource and cluster builders directly. Few cosmetic cleanup. Added unit test for the new field validation and implementation
