# api/openapi-spec/swagger.json
@@ -7187,6 +7187,10 @@
           "x-kubernetes-list-type": "",
           "x-kubernetes-patch-merge-key": "name",
           "x-kubernetes-patch-strategy": "merge"
+        },
+        "ref": {
+          "description": "Ref reference to an existing Builder/ClusterBuilder",
+          "$ref": "#/definitions/io.k8s.api.core.v1.ObjectReference"
         }
       }
     },
